--- a/products.html
+++ b/products.html
@@ -475,6 +475,28 @@
                           />
                         </li>
 
+                        <li class="ss-carousel__item textBlock">
+                          <div class="ss-carousel__description">
+                            <p>
+                              Situated in a luxury diamond boutique, the
+                              chandelier evokes purity and sophistication,
+                              creating an immediate sense of opulence. It makes
+                              a striking first impression, setting the tone for
+                              an engaging retail experience.
+                            </p>
+                            <p>
+                              The centerpiece of the boutique is a bespoke
+                              chandelier inspired by ocean waves and pearl-like
+                              purity, echoing the brilliance of cultured
+                              diamonds. Designed to resemble cascading droplets,
+                              it creates a dynamic, sculptural wave that
+                              reflects light and narrative. More than lighting,
+                              it embodies the brand’s essence—where
+                              craftsmanship meets poetic design.
+                            </p>
+                          </div>
+                        </li>
+
                         <li class="ss-carousel__item videoBlock">
                           <video muted autoplay loop>
                             <source
@@ -499,6 +521,30 @@
                           </video>
                         </li>
 
+                        <li class="ss-carousel__item textBlock">
+                          <div class="ss-carousel__description">
+                            <p>
+                              The installation captures the serene rhythm of
+                              waves frozen mid-motion, with suspended droplets
+                              and curved brass wings guiding the eye in a fluid
+                              choreography. As a moving art form, the chandelier
+                              invites guests to pause and immerse themselves in
+                              an atmosphere where opulence meets tranquility. It
+                              beautifully echoes the brand’s essence of elegance
+                              and calm.
+                            </p>
+                            <p>
+                              Hand-blown from delicate Borosil Italian glass,
+                              each droplet captures the purity of diamonds and
+                              the fluidity of ocean waves, suspended in a
+                              graceful wave design. Framed by curved, subtly lit
+                              brass wings, the chandelier blends craftsmanship,
+                              material innovation, and storytelling in a refined
+                              centerpiece.
+                            </p>
+                          </div>
+                        </li>
+
                         <li class="ss-carousel__item videoBlock">
                           <video muted autoplay loop>
                             <source
@@ -509,6 +555,19 @@
 
                             Your browser does not support the video tag.
                           </video>
+                        </li>
+                        <li class="ss-carousel__item textBlock">
+                          <div class="ss-carousel__description">
+                            <p>
+                              The design draws from the serene experience of the
+                              ocean’s edge, creating an immersive environment
+                              that mirrors the purity and fluidity of lab-grown
+                              diamonds. A calming blue palette slows the heart
+                              rate and enhances the diamonds' brilliance,
+                              resulting in a luxurious yet tranquil space that
+                              embodies peaceful refinement.
+                            </p>
+                          </div>
                         </li>
 
                         <li class="ss-carousel__item imgBlock">
@@ -552,16 +611,17 @@
                               <p>Id. Medha Pulipati</p>
                               <h5 class="subHead2">Project Manager</h5>
                               <p>Rakesh CH</p>
+                              <h5 class="subHead2">Procurment Manager</h5>
+                              <p>Abhilash.V</p>
 
                               <h5 class="subHead2">Project Team</h5>
                               <p>Ravi Kumar K</p>
-                              <p>Abdul</p>
-                              <p>Pavan P NSK</p>
+
                               <p>Ar. Chennakeshava.R</p>
                               <p>Ar. Vaishnavi Basireddy</p>
                               <p>Krishna Kanth P</p>
                               <p>Rajib roy</p>
-                              <p>Keshav G</p>
+
                               <p>Shamsheer p</p>
                               <p>Chandan Halder</p>
                               <p>Somisetty Baby Sushma</p>
@@ -569,15 +629,16 @@
 
                             <div>
                               <h5>Project Incharge</h5>
-                              <p>Sai</p>
+                              <p>Ameer khan</p>
                               <h5 class="subHead2">Operational manager</h5>
                               <p>Fathima</p>
-                              <h5 class="subHead2">Site supervisor</h5>
-                              <p>Ameer khan</p>
+
                               <h5 class="subHead2">Photograghy</h5>
                               <p>Victor</p>
                               <h5 class="subHead2">Content</h5>
                               <p>Ananth</p>
+                              <h5 class="subHead2">Relationship Manager</h5>
+                              <p>Tharani M</p>
                             </div>
                           </div>
                         </li>
