--- a/news.html
+++ b/news.html
@@ -184,12 +184,12 @@
       }
 
       .newsContainer {
-        width: 90%;
+        width: 80%;
         margin: 0 auto;
       }
       .newsItem {
         display: flex;
-        gap: 30px;
+        gap: 20px;
         margin-bottom: 20px;
       }
       .newsItem .date {
@@ -297,18 +297,23 @@
                 </div>
                 <div class="newsDetails">
                   <h2>
-                    The standard Lorem Ipsum passage, used since the 1500s
+                    EyeCatch Architects Wins Second Place at FOAID 2024 – A
+                    Proud Moment for Telugu Architecture
                   </h2>
                   <div class="description">
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                      sed do eiusmod tempor incididunt ut labore et dolore magna
-                      aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                      ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                      Duis aute irure dolor in reprehenderit in voluptate velit
-                      esse cillum dolore eu fugiat nulla pariatur. Excepteur
-                      sint occaecat cupidatat non proident, sunt in culpa qui
-                      officia deserunt mollit anim id est laborum.
+                      EyeCatch Architects has secured second place in the
+                      prestigious Festival of Architecture and Interior
+                      Designing (FOAID) 2024, a nationwide event held annually
+                      in Delhi and Mumbai. Our firm was recognized in the highly
+                      competitive Conceptual Architecture category, with Chief
+                      Architect Pranay Mithilesh Pulipati receiving the award
+                      during the Delhi ceremony. This achievement marks a major
+                      milestone for EyeCatch Architects and brings pride to the
+                      Telugu architectural community. We are thrilled to share
+                      that our recognition was also featured on TV9, Telangana
+                      and Andhra Pradesh’s leading news channel. We extend our
+                      heartfelt thanks to TV9 for showcasing our success.
                     </p>
                   </div>
                 </div>
