--- a/products.html
+++ b/products.html
@@ -512,7 +512,7 @@
                         <li class="ss-carousel__item videoBlock">
                           <video muted autoplay loop>
                             <source
-                              src="/products/ladia/chandelier products.mp4"
+                              src="/products/ladia/Chandelier Products.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
