--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
         padding: 0;
         margin: 5px 0 0 0;
         color: #555;
-        font-size: 14px;
+        font-size: 13px;
+        text-transform: uppercase;
       }
       .header {
         position: fixed;
@@ -470,9 +471,8 @@
           <span></span>
           <span></span>
           <ul id="menu">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">News</a></li>
+            <li><a href="/index.html">Projects</a></li>
+            <li><a href="/news.html">News</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="#">People</a></li>
             <li><a href="#">Careers</a></li>
@@ -2342,8 +2342,11 @@
         color: #fff;
       }
       .swiper-pagination-bullet {
-        width: 16px !important;
-        height: 16px !important;
+        width: 10px !important;
+        height: 10px !important;
+      }
+      .swiper-pagination-bullet-active {
+        background-color: #ed1c24 !important;
       }
 
       * {
