--- a/about.html
+++ b/about.html
@@ -271,10 +271,12 @@
           <span></span>
           <span></span>
           <ul id="menu">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
             <li><a href="/index.html">Projects</a></li>
-            <li><a href="#">Blog</a></li>
+            <li><a href="/news.html">News</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="#">People</a></li>
+            <li><a href="#">Careers</a></li>
+
             <li><a href="#">Contact</a></li>
           </ul>
         </div>
