product and project

--- a/about.html
+++ b/about.html
@@ -234,7 +234,7 @@
       <div class="header">
         <div class="headerContainer">
           <div class="logo">
-            <a href="#"><img src="/images/logo.png" /></a>
+            <a href="/index.html"><img src="/images/logo.png" /></a>
           </div>
           <!-- Logo -->
           <div class="topNav" style="display: none">
