--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       }
       .projectsGrid {
         /* width: 50%; */
-        margin: 0 auto;
+        margin: 0 auto 150px auto;
         display: flex;
         flex-direction: column;
         padding: 100px 0;
@@ -447,7 +447,7 @@
       <div class="header">
         <div class="headerContainer">
           <div class="logo">
-            <a href="#"><img src="/images/logo.png" /></a>
+            <a href="/index.html"><img src="/images/logo.png" /></a>
           </div>
           <!-- Logo -->
           <div class="topNav">
@@ -1595,7 +1595,6 @@
 
                             <div>
                               <h5>Project Incharge</h5>
-                              <p>Sai</p>
                               <p>Ameer khan</p>
                               <h5 class="subHead2">Operational manager</h5>
                               <p>Fathima</p>
@@ -1624,8 +1623,7 @@
                     <div class="icon">
                       <img
                         class="mobileSVG"
-                        src="/images/ic1.svg"
-                        type="image/svg+xml"
+                        src="/projects/aakruti/akruthi_Logo.jpg"
                       />
                     </div>
                     <div class="projectTitleInfo">
@@ -1657,8 +1655,7 @@
                               <div class="icon">
                                 <img
                                   class="mobileSVG"
-                                  src="/images/ic1.svg"
-                                  type="image/svg+xml"
+                                  src="/projects/aakruti/akruthi_Logo.jpg"
                                 />
                               </div>
                               <div class="projectTitleInfo">
@@ -1666,16 +1663,21 @@
                                   Aakruti - Clothing Store
                                 </h3>
                                 <p class="location">Gachibowli, Hyderabad</p>
+                                <p class="location">2025</p>
                               </div>
                             </div>
                             <div class="moreInfo">
                               <div>
                                 <h4>Client</h4>
-                                <p>Lorem Ipsum</p>
+                                <p>Murali</p>
+                              </div>
+                              <div>
+                                <h4>Typology</h4>
+                                <p>Commercial</p>
                               </div>
                               <div>
                                 <h4>Size</h4>
-                                <p>6000 S.ft</p>
+                                <p>3650 S.ft</p>
                               </div>
                               <div>
                                 <h4>Status</h4>
@@ -1714,6 +1716,108 @@
                             src="/projects/aakruti/2.jpg"
                             alt=""
                           />
+                        </li>
+                        <li class="ss-carousel__item textBlock">
+                          <div class="ss-carousel__description">
+                            <p>
+                              In a bustling mall setting, the store’s decor
+                              stands out with a dramatic 'Aa' installation and a
+                              sleek, curved wall that commands attention. A
+                              strategically placed video wall amplifies
+                              visibility, using dynamic digital content to
+                              engage passersby and attract walk-in customers
+                              through visual storytelling.
+                            </p>
+                          </div>
+                        </li>
+
+                        <li class="ss-carousel__item videoBlock">
+                          <video muted autoplay loop>
+                            <source
+                              src="/projects/aakruti/Akruti2.mp4"
+                              type="video/mp4"
+                              poster="/images/blank.png"
+                            />
+
+                            Your browser does not support the video tag.
+                          </video>
+                        </li>
+                        <li class="ss-carousel__item imgBlock horizantal">
+                          <img
+                            class="ss-carousel__item__image"
+                            src="/projects/aakruti/plan.jpg"
+                            alt=""
+                          />
+                        </li>
+
+                        <li class="ss-carousel__item textBlock">
+                          <div class="ss-carousel__description">
+                            <p>
+                              The store delivers a cohesive and immersive
+                              spatial experience, guided by gracefully curved SS
+                              pipe racks and dynamic triangular lighting that
+                              animates the space. The sculptural 'Aa' entrance
+                              installation serves as a bold brand statement,
+                              while a soft, refined color palette fosters a
+                              sense of calm. Thoughtfully planned zoning
+                              enhances comfort, fluid movement, and engaging
+                              visual connections throughout the store.
+                            </p>
+                            <p>
+                              The zoned layout ensures smooth navigation and
+                              ample display space, with gondolas for added
+                              hanging and a dedicated service area offering
+                              easy, private access to trial rooms.
+                            </p>
+                          </div>
+                        </li>
+
+                        <li class="ss-carousel__item videoBlock">
+                          <video muted autoplay loop>
+                            <source
+                              src="/projects/aakruti/1.mp4"
+                              type="video/mp4"
+                              poster="/images/blank.png"
+                            />
+
+                            Your browser does not support the video tag.
+                          </video>
+                        </li>
+
+                        <li class="ss-carousel__item videoBlock">
+                          <video muted autoplay loop>
+                            <source
+                              src="/projects/aakruti/2.mp4"
+                              type="video/mp4"
+                              poster="/images/blank.png"
+                            />
+
+                            Your browser does not support the video tag.
+                          </video>
+                        </li>
+
+                        <li class="ss-carousel__item videoBlock">
+                          <video muted autoplay loop>
+                            <source
+                              src="/projects/aakruti/3.mp4"
+                              type="video/mp4"
+                              poster="/images/blank.png"
+                            />
+
+                            Your browser does not support the video tag.
+                          </video>
+                        </li>
+
+                        <li class="ss-carousel__item videoBlock">
+                          <video muted autoplay loop>
+                            <source
+                              src="/projects/aakruti/Akruti1.mp4"
+                              type="video/mp4"
+                              poster="/images/blank.png"
+                            />
+
+                            Your browser does not support the video tag.
+                          </video>
                         </li>
 
                         <li class="ss-carousel__item slideBlock">
@@ -1759,30 +1863,27 @@
                             alt=""
                           />
                         </li>
-                        <li class="ss-carousel__item imgBlock horizantal">
-                          <img
-                            class="ss-carousel__item__image"
-                            src="/projects/aakruti/plan.jpg"
-                            alt=""
-                          />
-                        </li>
 
-                        <!-- <li class="ss-carousel__item textBlock">
+                        <li class="ss-carousel__item textBlock">
                           <div class="ss-carousel__description">
                             <p>
-                              Parabolic divisions break linear monotony,
-                              creating well-defined, dual-sided display zones.
-                              Curved modules maximize display, ensure smooth
-                              flow, and add rhythmic movement to the space.
-                            </p>
-                            <p>
-                              Swooping partitions serve as visual dividers and
-                              display supports, blending beauty and
-                              functionality. This two-in-one design adds depth
-                              and continuous storytelling to the space.
+                              This project masterfully intertwines narrative and
+                              design, with SS pipes shaped like flowing threads
+                              to form display racks that seamlessly blend
+                              function and form. These precisely bent pipes
+                              double as partitions, hanging systems, and
+                              wayfinding elements, guiding visitors through the
+                              space with fluid elegance. Anchoring the brand
+                              identity, the sculptural ‘Aa’ installation serves
+                              as a striking focal point, while triangular
+                              stretch lights introduce a sense of dynamism. A
+                              muted, refined color palette balances the energy,
+                              creating a harmonious environment that fuses
+                              contemporary structure with timeless cultural
+                              nuances for a truly distinctive spatial experience
                             </p>
                           </div>
-                        </li> -->
+                        </li>
 
                         <li class="ss-carousel__item mapBlock">
                           <!-- <div id="map"></div> -->
@@ -1828,7 +1929,7 @@
 
                             <div>
                               <h5>Project Incharge</h5>
-                              <p>Sai</p>
+                              <p>Dinesh Babu.D</p>
                               <p>Ameer khan</p>
                               <h5 class="subHead2">Operational manager</h5>
                               <p>Fathima</p>
@@ -1848,7 +1949,8 @@
                 </div>
               </div>
               <!-- Project Item-->
-
+              <div class="projectItem"></div>
+              <!-- Project Item-->
               <footer class="footer">
                 <div class="footer-section">
                   <div class="footer-link" data-target="emailSection">
@@ -1876,9 +1978,10 @@
                         style="display: block"
                       >
                         <p class="detailedAddress">
-                          Plot No. 710, Road No. 36, Aditya Enclave,
-                          Venkatagiri, Jubilee Hills, Hyderabad, Telangana
-                          500033
+                          <strong>Eyecatch Architects & Branding</strong><br />
+                          Plot No. 710, Flat No. 8-2-293/82/A/710/1, ROAD NO 36,
+                          Jubilee Hills, lane beside US polo Assn, Hyderabad,
+                          Telangana 500033. <br />Ph No: 8125225696<br />
                         </p>
                       </div>
                       <p class="sub-toggle" onclick="toggleAddressVijayawada()">
@@ -1889,7 +1992,12 @@
                         id="vijayawadaAddress"
                         style="display: none"
                       >
-                        <p class="detailedAddress">XYZ Address</p>
+                        <p class="detailedAddress">
+                          <strong>Medha Aesthetics Pvt Ltd</strong><br />
+                          40-2-3/3C,1ST FLOOR, GOUSE STREET, MOGALRAJPURAM
+                          VIJAYAWADA-520010.<br />
+                          Ph No: 96189 02587<br />
+                        </p>
                       </div>
                       <p class="sub-toggle" onclick="toggleAddressTamil()">
                         Tamilnadu
@@ -1932,6 +2040,7 @@
                 </div>
               </footer>
             </div>
+
             <!-- Projects Grid-->
           </div>
           <!-- Grid Container-->
@@ -1949,6 +2058,7 @@
         display: flex;
         justify-content: center;
         gap: 50px;
+        margin-bottom: 240px;
       }
 
       .footer-section {
@@ -1999,7 +2109,10 @@
         font-weight: bold;
       }
       .detailedAddress {
-        max-width: 150px;
+        max-width: 200px;
+      }
+      .detailedAddress strong {
+        font-weight: 600;
       }
       .ss-carousel {
         padding: 24px 0px;
