--- a/products.html
+++ b/products.html
@@ -343,7 +343,7 @@
       <div class="header">
         <div class="headerContainer">
           <div class="logo">
-            <a href="#"><img src="/images/logo.png" /></a>
+            <a href="/index.html"><img src="/images/logo.png" /></a>
           </div>
           <!-- Logo -->
           <div class="topNav">
@@ -389,7 +389,7 @@
                     </div>
                     <div class="projectTitleInfo">
                       <h3 class="projectTitle">Ladia - Lab Grown Diamonds</h3>
-                      <p class="location">JUBILEE HILLS,PUNJAGUTTA</p>
+                      <p class="location">JUBILEE HILLS, PUNJAGUTTA</p>
                     </div>
                   </div>
                   <div class="heroSection">
@@ -421,7 +421,9 @@
                                 <h3 class="projectTitle">
                                   Ladia - Lab Grown Diamonds
                                 </h3>
-                                <p class="location">JUBILEE HILLS,PUNJAGUTTA</p>
+                                <p class="location">
+                                  JUBILEE HILLS, PUNJAGUTTA
+                                </p>
                                 <p class="location">2023</p>
                               </div>
                             </div>
@@ -436,7 +438,7 @@
                               </div>
                               <div>
                                 <h4>Size</h4>
-                                <p>2500 S.ft</p>
+                                <p>32 S.ft</p>
                               </div>
                               <div>
                                 <h4>Status</h4>
