--- a/index.html
+++ b/index.html
@@ -316,12 +316,39 @@
       .css-mobile-menu #menuToggle input:checked ~ ul {
         transform: none;
       }
+      /* Hide submenu initially */
+      #menu .has-submenu .submenu {
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.3s ease;
+        padding-left: 15px;
+        list-style: none;
+      }
+
+      /* When open, show submenu */
+      #menu .has-submenu.open .submenu {
+        max-height: 300px;
+      }
+
+      /* Style the icon specifically in the menu */
+      #menu .submenu-toggle {
+        display: flex;
+        justify-content: right;
+        align-items: center;
+      }
+
+      #menu .submenu-icon {
+        /* font-weight: bold; */
+        font-size: 14px;
+        margin-right: 5px;
+        line-height: 1;
+      }
 
       .map {
         width: 100%;
-        height: 400px;
-        border: 1px solid #ccc;
-        border-radius: 8px;
+        height: 100vh;
+        /* border: 1px solid #ccc;
+        border-radius: 8px; */
       }
 
       @media all and (max-width: 576px) {
@@ -451,7 +478,7 @@
           </div>
           <!-- Logo -->
           <div class="topNav">
-            <span><a href="#">Architecture</a></span>
+            <span><a href="/architecture.html">Architecture</a></span>
             <span><a href="#" class="activeNav">Interior</a></span>
             <span><a href="/products.html">Products</a></span>
             <!-- <span>Nav1</span>
@@ -471,7 +498,20 @@
           <span></span>
           <span></span>
           <ul id="menu">
-            <li><a href="/index.html">Projects</a></li>
+            <li class="has-submenu">
+              <a
+                href="javascript:void(0);"
+                class="submenu-toggle"
+                onclick="toggleSubmenu(this)"
+              >
+                <span class="submenu-icon">+</span>Projects
+              </a>
+              <ul class="submenu">
+                <li><a href="/architecture.html">Architecture</a></li>
+                <li><a href="/index.html">Interior</a></li>
+                <li><a href="/products.html">Products</a></li>
+              </ul>
+            </li>
             <li><a href="/news.html">News</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="#">People</a></li>
@@ -1226,8 +1266,8 @@
                         </li>
 
                         <li class="ss-carousel__item mapBlock">
-                          <!-- <div id="map"></div> -->
-                          <iframe
+                          <div id="map2" class="map"></div>
+                          <!-- <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3806.6520199870743!2d78.41060947493568!3d17.42847958346571!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb915d5c699807%3A0xe06d0d7506cde173!2sLadia%20Lab%20Grown%20Diamond%20Jewellery%20Jubilee%20Hills!5e0!3m2!1sen!2sin!4v1745475220740!5m2!1sen!2sin"
                             width="600"
                             height="450"
@@ -1235,7 +1275,7 @@
                             allowfullscreen=""
                             loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"
-                          ></iframe>
+                          ></iframe> -->
                         </li>
 
                         <li class="ss-carousel__item teamBlock threeGrid">
@@ -1552,8 +1592,8 @@
                         </li>
 
                         <li class="ss-carousel__item mapBlock">
-                          <!-- <div id="map"></div> -->
-                          <iframe
+                          <div id="map3" class="map"></div>
+                          <!-- <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3806.6520199870743!2d78.41060947493568!3d17.42847958346571!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb915d5c699807%3A0xe06d0d7506cde173!2sLadia%20Lab%20Grown%20Diamond%20Jewellery%20Jubilee%20Hills!5e0!3m2!1sen!2sin!4v1745475220740!5m2!1sen!2sin"
                             width="600"
                             height="450"
@@ -1561,7 +1601,7 @@
                             allowfullscreen=""
                             loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"
-                          ></iframe>
+                          ></iframe> -->
                         </li>
 
                         <li class="ss-carousel__item teamBlock threeGrid">
@@ -1886,8 +1926,8 @@
                         </li>
 
                         <li class="ss-carousel__item mapBlock">
-                          <!-- <div id="map"></div> -->
-                          <iframe
+                          <div id="map4" class="map"></div>
+                          <!-- <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3806.5265052859468!2d78.3665691749358!3d17.434496483460787!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb93cc7605e7ad%3A0x7f8a7bf1bc5f99bb!2sAakruti%20Gachibowli!5e0!3m2!1sen!2sin!4v1745913765933!5m2!1sen!2sin"
                             width="600"
                             height="450"
@@ -1895,7 +1935,7 @@
                             allowfullscreen=""
                             loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"
-                          ></iframe>
+                          ></iframe> -->
                         </li>
 
                         <li class="ss-carousel__item teamBlock threeGrid">
@@ -2714,12 +2754,6 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
               (el) => (el.style.height = window.innerHeight - 140 + "px")
             );
 
-          document
-            .querySelectorAll(".map-container")
-            .forEach(
-              (el) => (el.style.height = window.innerHeight - 140 + "px")
-            );
-
           // ✅ Scroll to vertically center this item with velocity-style timing
           const itemOffsetTop = this.offsetTop;
           const itemHeight = this.offsetHeight;
@@ -2882,38 +2916,114 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
         document.getElementById("tamilnaduAddress").style.display = "none";
       }
     </script>
+    <script>
+      function toggleSubmenu(el) {
+        const parentLi = el.closest("li.has-submenu");
+        const icon = el.querySelector(".submenu-icon");
+
+        parentLi.classList.toggle("open");
+        if (parentLi.classList.contains("open")) {
+          icon.textContent = "−";
+        } else {
+          icon.textContent = "+";
+        }
+      }
+    </script>
 
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script>
-      const locations = [
-        { coords: [17.4281, 78.4484974], address: "Amyra Silver" },
+      const mapConfigs = [
         {
-          coords: [17.42848, 78.413184],
-          address: "Ladia Lab Grown Diamond Jewellery",
+          id: "map1",
+          coords: [16.5050288, 80.6619402],
+          title: "Amyra Silver - Jewellery Store",
+          address:
+            "D. No: 40-2-3/3C, Gouse Street, Mogalrajpuram, Vijayawada, Andhra Pradesh 520010",
         },
-        { coords: [17.43, 78.42], address: "Location 3 (Update Later)" },
-        { coords: [17.431, 78.425], address: "Location 4 (Update Later)" },
+        {
+          id: "map2",
+          coords: [17.432709, 78.4281349],
+          title: "Ladia - Lab Grown Diamond Jewellery",
+          address:
+            "Road No. 36, Jubilee Hills, beside US Polo Assn, Hyderabad, Telangana 500033",
+        },
+        {
+          id: "map3",
+          coords: [17.43, 78.42],
+          title: "Smart Furniture",
+          address: "MG Road, Vijayawada, Andhra Pradesh 520010",
+        },
+        {
+          id: "map4",
+          coords: [17.4344965, 78.3691441],
+          title: "Aakruti - Clothing Store",
+          address:
+            "1-74/DH 186 & 201, Gachibowli - Miyapur Rd, Hyderabad, Telangana 500032",
+        },
       ];
 
-      function createMap(id, location) {
-        const map = L.map(id).setView(location.coords, 17);
+      const customIcon = L.icon({
+        iconUrl: "/images/pointer.png",
+        iconSize: [32, 32],
+        iconAnchor: [16, 32],
+        popupAnchor: [0, -32],
+      });
 
-        L.tileLayer(
-          "https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png",
-          {
-            attribution: "&copy; OpenStreetMap &copy; CARTO",
-            subdomains: "abcd",
-            maxZoom: 20,
+      const mapInstances = {};
+
+      function waitForElementVisible(el, callback, maxTries = 20) {
+        let count = 0;
+        const interval = setInterval(() => {
+          const style = getComputedStyle(el);
+          if (
+            style.display !== "none" &&
+            el.offsetHeight > 0 &&
+            el.offsetWidth > 0
+          ) {
+            clearInterval(interval);
+            callback();
           }
-        ).addTo(map);
-
-        L.marker(location.coords).addTo(map).bindPopup(location.address);
+          if (++count > maxTries) clearInterval(interval);
+        }, 200);
       }
 
-      createMap("map1", locations[0]);
-      createMap("map2", locations[1]);
-      createMap("map3", locations[2]);
-      createMap("map4", locations[3]);
+      function initMap({ id, coords, title, address }) {
+        const el = document.getElementById(id);
+        if (!el) return;
+
+        waitForElementVisible(el, () => {
+          const map = L.map(id, { attributionControl: false }).setView(
+            coords,
+            17
+          );
+
+          L.tileLayer(
+            "https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png",
+            {
+              attribution: "&copy; OpenStreetMap &copy; Carto",
+              subdomains: "abcd",
+              maxZoom: 20,
+            }
+          ).addTo(map);
+
+          L.marker(coords, { icon: customIcon })
+            .addTo(map)
+            .bindPopup(`<strong>${title}</strong><br>${address}`)
+            .openPopup();
+
+          mapInstances[id] = map;
+
+          setTimeout(() => map.invalidateSize(), 300);
+        });
+      }
+
+      window.addEventListener("load", () => {
+        mapConfigs.forEach((config) => initMap(config));
+      });
+
+      window.addEventListener("resize", () => {
+        Object.values(mapInstances).forEach((map) => map.invalidateSize());
+      });
     </script>
   </body>
 </html>
