--- a/news.html
+++ b/news.html
@@ -100,7 +100,7 @@
         opacity: 0;
         z-index: 2;
       }
-      .css-mobile-menu #menuToggle span {
+      .css-mobile-menu #menuToggle span.span {
         display: flex;
         width: 29px;
         height: 2px;
@@ -113,21 +113,21 @@
         transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
           background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
       }
-      .css-mobile-menu #menuToggle span:first-child {
+      .css-mobile-menu #menuToggle span.span:first-child {
         transform-origin: 0% 0%;
       }
-      .css-mobile-menu #menuToggle span:nth-last-child(2) {
+      .css-mobile-menu #menuToggle span.span:nth-last-child(2) {
         transform-origin: 0% 100%;
       }
-      .css-mobile-menu #menuToggle input:checked ~ span {
+      .css-mobile-menu #menuToggle input:checked ~ span.span {
         opacity: 1;
         transform: rotate(45deg) translate(-3px, -1px);
       }
-      .css-mobile-menu #menuToggle input:checked ~ span:nth-last-child(3) {
+      .css-mobile-menu #menuToggle input:checked ~ span.span:nth-last-child(3) {
         opacity: 0;
         transform: rotate(0deg) scale(0.2, 0.2);
       }
-      .css-mobile-menu #menuToggle input:checked ~ span:nth-last-child(2) {
+      .css-mobile-menu #menuToggle input:checked ~ span.span:nth-last-child(2) {
         transform: rotate(-45deg) translate(0, -1px);
       }
       #menu {
@@ -138,7 +138,7 @@
         margin: -50px 0 0 -50px;
         padding: 50px 30px 0 50px;
         padding-top: 110px;
-        background-color: transparent;
+        background-color: #fff;
         -webkit-font-smoothing: antialiased;
         transform-origin: 0% 0%;
         transform: translateX(100%);
@@ -146,6 +146,7 @@
         right: 0;
         transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
         list-style: none;
+        box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
       }
       #menu li {
         padding: 10px 0;
@@ -187,6 +188,13 @@
         font-size: 14px;
         margin-right: 5px;
         line-height: 1;
+      }
+
+      .map {
+        width: 100%;
+        height: 100vh;
+        /* border: 1px solid #ccc;
+        border-radius: 8px; */
       }
 
       .social {
@@ -296,9 +304,9 @@
       <nav class="css-mobile-menu" role="navigation">
         <div id="menuToggle">
           <input type="checkbox" />
-          <span></span>
-          <span></span>
-          <span></span>
+          <span class="span"></span>
+          <span class="span"></span>
+          <span class="span"></span>
           <ul id="menu">
             <li class="has-submenu">
               <a
