--- a/products.html
+++ b/products.html
@@ -1076,27 +1076,21 @@
                           />
                         </li>
 
-                        <!-- <li class="ss-carousel__item textBlock">
+                        <li class="ss-carousel__item textBlock">
                           <div class="ss-carousel__description">
                             <p>
-                              Situated in a luxury diamond boutique, the
-                              chandelier evokes purity and sophistication,
-                              creating an immediate sense of opulence. It makes
-                              a striking first impression, setting the tone for
-                              an engaging retail experience.
-                            </p>
-                            <p>
-                              The centerpiece of the boutique is a bespoke
-                              chandelier inspired by ocean waves and pearl-like
-                              purity, echoing the brilliance of cultured
-                              diamonds. Designed to resemble cascading droplets,
-                              it creates a dynamic, sculptural wave that
-                              reflects light and narrative. More than lighting,
-                              it embodies the brand’s essence—where
-                              craftsmanship meets poetic design.
+                              Structural columns are transformed into sleek
+                              design elements, featuring layered wave-shaped
+                              display racks crafted from brass and
+                              stainless-steel pipes. Subtle brass accents lend a
+                              touch of luxury, creating a striking contrast.
+                              Previously challenging columns have been
+                              ingeniously reshaped into curved display racks
+                              that seamlessly wrap around the pillars, enhancing
+                              both spatial flow and product presentation.
                             </p>
                           </div>
-                        </li> -->
+                        </li>
 
                         <li class="ss-carousel__item videoBlock">
                           <video muted autoplay loop>
@@ -1178,6 +1172,18 @@
                             alt=""
                           />
                         </li>
+                        <li class="ss-carousel__item textBlock">
+                          <div class="ss-carousel__description">
+                            <p>
+                              Despite the compact layout, the design ensures
+                              effortless circulation and a sense of openness.
+                              This approach harmoniously combines artistic
+                              expression with functional ingenuity, elevating
+                              the brand identity and enriching the customer
+                              experience.
+                            </p>
+                          </div>
+                        </li>
 
                         <li class="ss-carousel__item imgBlock">
                           <img
@@ -1189,15 +1195,6 @@
 
                         <li class="ss-carousel__item mapBlock">
                           <div id="map1l2" class="map"></div>
-                          <!-- <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3806.6520199870743!2d78.41060947493568!3d17.42847958346571!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb915d5c699807%3A0xe06d0d7506cde173!2sLadia%20Lab%20Grown%20Diamond%20Jewellery%20Jubilee%20Hills!5e0!3m2!1sen!2sin!4v1745475220740!5m2!1sen!2sin"
-                            width="600"
-                            height="450"
-                            style="border: 0"
-                            allowfullscreen=""
-                            loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade"
-                          ></iframe> -->
                         </li>
 
                         <li class="ss-carousel__item teamBlock threeGrid">
